frontend 디자인 수정, backend 폴더명 수정

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@ __pycache__/
 *.pyo
 *.pyd
 *.sqlite3
+
+# Chroma local DB (common)
+chroma/
+chromadb/
+chroma_db/
+chroma-data/
+data/chroma/
+db/chroma/
