VectorDB를 크로마디비에서 Weaviate로 변경

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ uvicorn
 python-multipart
 
 # === 데이터베이스 ===
-chromadb
 psycopg2-binary
 neo4j
 
@@ -40,3 +39,5 @@ langsmith
 pydantic
 numpy
 python-dotenv
+
+weaviate-client
