--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # GMP/SOP RAG + Agent 시스템 의존성
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126
 # pip install -r requirements.txt
 
 # === 기본 웹 프레임워크 ===
