로그인 기능구현 및 ui만듦 feat.지현님

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@ fastapi
 uvicorn
 python-multipart
 
+# === 인증 & 보안 (Auth) ===
+passlib[bcrypt]
+python-jose[cryptography]
+
 # === 데이터베이스 ===
 psycopg2-binary
 neo4j
