onlyoffice로 docx 파일 업로드 했을 경우 편집 및 수정 저장 모두 다 되도록 함 / s3로 파일 업로드 가능하도록 수정함 / 배포코드 작성

--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,11 @@ openai
 # === LangSmith (추적/모니터링) ===
 langsmith
 
+# === S3 / OnlyOffice ===
+boto3
+PyJWT
+httpx
+
 # === 기타 ===
 pydantic
 numpy
